@@ -2,43 +2,50 @@ package drivers;
 
 import com.codeborne.selenide.WebDriverProvider;
 import config.BrowserstackConfig;
-import io.appium.java_client.android.AndroidDriver;
-import io.appium.java_client.android.options.UiAutomator2Options;
+import config.BrowserstackDriverConfig;
 import org.aeonbits.owner.ConfigFactory;
 import org.openqa.selenium.Capabilities;
+import org.openqa.selenium.MutableCapabilities;
 import org.openqa.selenium.WebDriver;
+import org.openqa.selenium.remote.RemoteWebDriver;
 
 import javax.annotation.Nonnull;
 import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URISyntaxException;
-
+import java.net.URL;
 
 public class BrowserstackDriver implements WebDriverProvider {
 
-
-//    private static final BrowserStackAuthConfig authConfig = ConfigFactory.create(BrowserStackAuthConfig.class,
-//            System.getProperties());
-    private static final BrowserstackConfig config = ConfigFactory.create(BrowserstackConfig.class);
-
+    static BrowserstackConfig config  = ConfigFactory.create(BrowserstackConfig.class, System.getProperties());
+    static BrowserstackDriverConfig mobileConfig  = ConfigFactory.create(BrowserstackDriverConfig.class, System.getProperties());
 
     @Nonnull
     @Override
     public WebDriver createDriver(@Nonnull Capabilities capabilities) {
-        UiAutomator2Options options = new UiAutomator2Options();
-        options.setAutomationName(config.automationName())
-                .setPlatformName(config.platformName())
-                .setPlatformVersion(config.browserstackPlatform())
-                .setDeviceName(config.browserstackDevice())
-                .setFullReset(config.appFullReset())
-                .setApp(config.browserstackApp())
-                .setLanguage(config.appLanguage())
-                .setLocale(config.appLocale());
+        MutableCapabilities caps = new MutableCapabilities();
 
+        // Set your access credentials
+        caps.setCapability("browserstack.user", config.getUser());
+        caps.setCapability("browserstack.key", config.getKey());
+
+        // Set URL of the application under test
+        caps.setCapability("app", mobileConfig.getApp());
+
+        // Specify device and os_version for testing
+        caps.setCapability("device", mobileConfig.getDevice());
+        caps.setCapability("platform.version", mobileConfig.getOsVersion());
+
+        // Set other BrowserStack capabilities
+        caps.setCapability("project", "First Java Project");
+        caps.setCapability("build", "browserstack-build-1");
+        caps.setCapability("name", "first_test");
+
+
+        // Initialise the remote Webdriver using BrowserStack remote URL
+        // and desired capabilities defined above
         try {
-            return new AndroidDriver(new URI("https://" + config.getUser() + ":" + config.getKey()
-                    + "@" + config.browserstackUrl()).toURL(), options);
-        } catch (MalformedURLException | URISyntaxException e) {
+            return new RemoteWebDriver(
+                    new URL(config.getBrowserstackUrl()), caps);
+        } catch (MalformedURLException e) {
             throw new RuntimeException(e);
         }
     }
